--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ html,body{
 
 img{
     border-radius: 10px 0px 0px 10px;
+    width: 400px;
 }
 
 .description{
@@ -118,7 +119,7 @@ footer{
     font-family: 'Outfit', sans-serif;
     text-align: center;
     position: absolute;
-    bottom: 35px;
+    bottom: 30px;
     
 }
 footer a{
