--- a/style.css
+++ b/style.css
@@ -1,17 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap');
 /*font-family: 'Montserrat', sans-serif;*/
 @import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,500&display=swap');
+
 /*font-family: 'Fraunces', serif;*/
-body{
-    background-color:hsl(30, 38%, 92%) ;
+body {
+    background-color: hsl(30, 38%, 92%);
     min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
 
 }
-.box{
-    background-color:hsl(0, 0%, 100%);
+
+.box {
+    background-color: hsl(0, 0%, 100%);
     width: 750px;
     border-radius: 10px;
     display: flex;
@@ -21,33 +23,36 @@ body{
 }
 
 .price {
-    width:300px;
+    width: 300px;
     display: flex;
-    justify-content:center;
-    text-align:center;
+    justify-content: center;
+    text-align: center;
 }
-.priceold{
+
+.priceold {
     margin-left: 35px;
     margin-top: 35px;
     display: flex;
     justify-content: end;
-    text-align:center;
+    text-align: center;
 }
 
-.price h2{
-    color:hsl(158, 36%, 37%);
+.price h2 {
+    color: hsl(158, 36%, 37%);
     font-size: 35pt;
     font-weight: bolder;
 }
 
-.priceold h3{
+.priceold h3 {
     color: hsl(228, 12%, 48%);
     text-align: center;
     text-decoration: line-through;
 }
+
 img {
-    width: 400px;
-    padding: 0;
+    flex: 1 0 50%;
+    object-fit: cover;
+    
 }
 
 .texto h1 {
@@ -56,13 +61,13 @@ img {
     font-size: 30pt;
     padding-left: 25px;
     padding-right: 50px;
-    text-align:left;
-    
+    text-align: left;
+
 }
 
 .texto h4 {
     width: 80px;
-    background-color:hsl(158, 36%, 37%) ;
+    background-color: hsl(158, 36%, 37%);
     padding: 20px;
 }
 
@@ -78,14 +83,17 @@ p {
 
 
 }
+
 /*Formatação da legenda final-creditos*/
 
-.attribution { font-size: 20px; 
+.attribution {
+    font-size: 20px;
     text-align: center;
     position: absolute;
     bottom: 0;
 
- }
-.attribution a { 
+}
+
+.attribution a {
     color: hsl(228, 45%, 44%);
- }
+}
